--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -76,7 +76,7 @@
     \footnotesize
     \begin{itemize}
         \item Notar que es una aproximación de la PDF (\emph{Probabilistic Density Function})
-        \item Es importante tener un número de muestras suficientes para poder representar la fdp adecuadamente.
+        \item Es importante tener un número de muestras suficientes para poder representar la PDF adecuadamente.
     \end{itemize}
     
     
