Slides 06: minor changes

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -162,7 +162,7 @@
             \centering
             $x \leftarrow \frac{1}{2} \sum_{i=1}^{12} \text{rand}(-\sigma, \sigma)$
 
-            \note{Al dividir por 2 estamos generando muestras desde $-6\simga$ a $6\sigma$} lo cúal aproxima bastante bien la distribución gaussiana pero no es exacta.}
+            \note{Al dividir por 2 estamos generando muestras desde $-6\simga$ a $6\sigma$ lo cúal aproxima bastante bien la distribución gaussiana pero no es exacta.}
         \end{minipage}
     \end{figure}
 
